# august-build

./: .firebaserc  CODE_OF_CONDUCT.md  Cargo.toml  README.md  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  publish.yml  release.yml  rust.yml
docs/: impl.md  index.md
docs/getting-started/: cli.md  command-reference.md  extending-august.md  installation.md  the-basics.md
docs/guide/: cli.md  commands.md  index.md  migrate.md  tutorial.md
docs/implementation/: index.md
docs/implementation/concepts/: commands.md  external-modules.md  index.md  structural.md  tasks.md
docs/implementation/parsing/: index.md  tokenisation.md
docs/implementation/runtime/: execution-pool.md
docs/old/: index.md
docs/old/getting-started/: index.md  installation.md  the-basics.md
docs/old/implementation/concepts/: command-def.md  pragmas.md
docs/old/implementation/parsing/: module-linking.md  syntax.md
docs/old/modules/: cargo.md
src/: cli.rs  colours.rs  error.rs  lexer.rs  lib.rs  main.rs  notifier.rs  parser.rs  runtime.rs
src/parsing/: error.rs  mod.rs  parse.rs  token.rs
src/runtime/: cli.rs  mod.rs  output.rs
syntax-examples/: cargo.august  ext_module.august  main.august  module_linking.august  new_syntax.august  rust.august
wix/: License.rtf  main.wxs
