[package]
name = "august-build"
description = """
Task-based build system with a custom syntax and focus on paralellism for all your artifact construction needs.
"""
version = "0.5.0"
edition = "2021"
authors = ["Hayden Brown <scratchcat458@gmail.com>"]
repository = "https://github.com/ScratchCat458/august-build"
homepage = "https://august-build.web.app"
documentation = "https://docs.rs/august-build"
keywords = ["build", "august", "build-system"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "development-tools",
]
readme = "README.md"
license = "MIT"
include = ["**/*.rs", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4"
chumsky = "0.9"
thiserror = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
dircpy = "0.3"
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
comfy-table = "7"
which = "6.0"
duct = "0.13"
crossbeam-utils = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process"] }
futures = "0.3"

[[bin]]
name = "august"
path = "src/main.rs"
