[package]
name = "august-build"
description = """
Task-based build system with a custom syntax and focus on paralellism for all your artifact construction needs.
"""
version = "0.6.2"
edition = "2021"
authors = ["Hayden Brown <scratchcat458@gmail.com>"]
repository = "https://github.com/ScratchCat458/august-build"
homepage = "https://august-build.web.app"
documentation = "https://docs.rs/august-build"
keywords = ["build", "august", "build-system"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "development-tools",
]
readme = "README.md"
license = "MIT"
include = ["**/*.rs", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Parser
chumsky = "0.9"
# Runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "fs", "process"] }
futures = "0.3"
dircpy = "0.3"
duct = "0.13"
# Utils
arc-swap = "1.7"
indexmap = { version = "2.7", features = ["std"] }
rustc-hash = "2.1"
thiserror = "2.0"
# CLI
ariadne = { version = "0.5", optional = true }
clap = { version = "4.5", features = ["derive", "string"], optional = true }
clap_complete = { version = "4.5", optional = true }
comfy-table = { version = "7.1", optional = true }
owo-colors = { version = "4.1", features = [
  "supports-colors",
], optional = true }

[features]
default = ["cli-deps"]
cli-deps = [
  "dep:ariadne",
  "dep:clap",
  "dep:clap_complete",
  "dep:comfy-table",
  "dep:owo-colors",
]

[[bin]]
name = "august"
path = "src/main.rs"
required-features = ["cli-deps"]
